# scout

./: .gitignore  Cargo.toml  README.md  test_commands.sh
.github/workflows/: release.yml
benches/: search_bench.rs  simhash_bench.rs  trigram_bench.rs
npm/: package.json
src/: config.rs  error.rs  lib.rs  main.rs  mcp.rs
src/cli/: commands.rs  output.rs
src/indexer/: mod.rs  pipeline.rs  schema.rs  simhash.rs  trigram.rs
src/parser/: code.rs  docx.rs  metadata.rs  mod.rs  pdf.rs  text.rs  walker.rs
src/search/: filters.rs  mod.rs  proximity.rs  query.rs  scorer.rs
src/storage/: mmap.rs  mod.rs  segment.rs  store.rs
tests/fixtures/: sample.md  sample.rs  sample.txt
tests/integration/: index_test.rs  query_test.rs  search_test.rs
